[project]
name = "jj-data-connector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "google-api-python-client>=2.154.0",
    "requests>=2.32.3",
    "rich>=13.9.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["jj_data_connector"]

[tool.hatch.build.targets.sdist]
packages = ["jj_data_connector"]
